fix: use ZGC for spark tests to avoid G1GC SIGSEGV on JVM 21